# wai-routing

./: CHANGELOG.md  README.md  wai-predicates.cabal  wai-routing.cabal
bench/: Bench.hs
examples/: eval-direct.hs  eval-routing.hs
src/Data/: Predicate.hs
src/Data/Predicate/: Descr.hs  Typeof.hs
src/Network/Wai/: Predicate.hs  Route.hs  Routing.hs
src/Network/Wai/Predicate/: Accept.hs  Capture.hs  Content.hs  Doc.hs  Error.hs  Header.hs  Internal.hs  MediaType.hs  Param.hs  Query.hs  Request.hs  Tutorial.hs  Types.hs
src/Network/Wai/Predicate/Parser/: MediaType.hs  Shared.hs
src/Network/Wai/Routing/: Error.hs  Internal.hs  MediaType.hs  Predicate.hs  Request.hs  Route.hs  Tutorial.hs
src/Network/Wai/Routing/Parser/: MediaType.hs  Shared.hs
src/Network/Wai/Routing/Predicate/: Accept.hs  Capture.hs  Content.hs  Cookie.hs  Header.hs  Param.hs  Predicate.hs  Query.hs
test/: TestSuite.hs
test/Tests/Data/: Predicate.hs
test/Tests/Wai/: Predicate.hs  Route.hs  Util.hs
