name:                wai-predicates
version:             0.1
synopsis:            Declarative routing for WAI.
license:             OtherLicense
license-file:        LICENSE
author:              Toralf Wittner
maintainer:          Toralf Wittner <tw@dtex.org>
copyright:           (c) 2014 Toralf Wittner
stability:           experimental
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

description:
    Provides the definition of a predicate type-class together
    with several concrete implementations which are used to
    constrain the set of possible WAI applications in a type-safe
    way.

source-repository head
    type:             git
    location:         git://github.com/twittner/wai-predicates.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Data.Predicate
        Network.Wai.Predicate
        Network.Wai.Predicate.Accept
        Network.Wai.Predicate.Content
        Network.Wai.Predicate.Error
        Network.Wai.Predicate.Header
        Network.Wai.Predicate.MediaType
        Network.Wai.Predicate.Param
        Network.Wai.Predicate.Query
        Network.Wai.Predicate.Request
        Network.Wai.Predicate.Tutorial
        Network.Wai.Route

    other-modules:
        Network.Wai.Predicate.Internal
        Network.Wai.Predicate.Parser.MediaType
        Network.Wai.Predicate.Parser.Shared

    build-depends:
        attoparsec       >= 0.10  && < 0.12
      , base             == 4.*
      , bytestring       >= 0.9   && < 0.11
      , bytestring-from  == 0.1.*
      , case-insensitive == 1.1.*
      , http-types       == 0.8.*
      , transformers     == 0.3.*
      , wai              == 2.0.*
      , wai-route        == 0.1.*

test-suite wai-predicates-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   src test
    main-is:          TestSuite.hs
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    other-modules:
        Tests.Data.Predicate
        Tests.Wai.Predicate
        Tests.Wai.Route
        Tests.Wai.Util

    build-depends:
        attoparsec
      , base                 == 4.*
      , blaze-builder        == 0.3.*
      , bytestring
      , bytestring-from
      , case-insensitive
      , http-types
      , HUnit                >= 1.2
      , QuickCheck           >= 2.3
      , tasty                >= 0.3
      , tasty-hunit          >= 0.2
      , tasty-quickcheck     >= 0.3
      , transformers
      , wai
      , wai-route
