name:                wai-routing
version:             0.1
synopsis:            Declarative routing for WAI.
license:             OtherLicense
license-file:        LICENSE
author:              Toralf Wittner
maintainer:          Toralf Wittner <tw@dtex.org>
copyright:           (c) 2014 Toralf Wittner
stability:           experimental
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    README.md
    examples/*.hs

description:
    Provides the definition of a type-class 'Predicate' together
    with several concrete implementations which are used to
    constrain the set of possible WAI applications in a type-safe
    way.
    .
    For details have a look ate the haddock documentation of
    @Network.Wai.Routing.Tutorial@.

source-repository head
    type:             git
    location:         git://github.com/twittner/wai-routing.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Wai.Routing
        Network.Wai.Routing.Error
        Network.Wai.Routing.MediaType
        Network.Wai.Routing.Request
        Network.Wai.Routing.Route
        Network.Wai.Routing.Tutorial
        Network.Wai.Routing.Predicate
        Network.Wai.Routing.Predicate.Predicate
        Network.Wai.Routing.Predicate.Accept
        Network.Wai.Routing.Predicate.Capture
        Network.Wai.Routing.Predicate.Content
        Network.Wai.Routing.Predicate.Header
        Network.Wai.Routing.Predicate.Param
        Network.Wai.Routing.Predicate.Query

    other-modules:
        Network.Wai.Routing.Internal
        Network.Wai.Routing.Parser.MediaType
        Network.Wai.Routing.Parser.Shared

    build-depends:
        attoparsec       >= 0.10  && < 0.12
      , base             == 4.*
      , bytestring       >= 0.9   && < 0.11
      , bytestring-from  == 0.1.*
      , case-insensitive == 1.1.*
      , http-types       == 0.8.*
      , transformers     == 0.3.*
      , wai              == 2.0.*
      , wai-route        == 0.1.*

test-suite wai-routing-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   src test
    main-is:          TestSuite.hs
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    other-modules:
        Tests.Data.Predicate
        Tests.Wai.Predicate
        Tests.Wai.Route
        Tests.Wai.Util

    build-depends:
        attoparsec
      , base                 == 4.*
      , blaze-builder        == 0.3.*
      , bytestring
      , bytestring-from
      , case-insensitive
      , http-types
      , HUnit                >= 1.2
      , QuickCheck           >= 2.3
      , tasty                >= 0.3
      , tasty-hunit          >= 0.2
      , tasty-quickcheck     >= 0.3
      , transformers
      , wai
      , wai-route
